--- a/Part 2 - Regression/Multiple Linear Regression/multiple_linear_regression.ipynb
+++ b/Part 2 - Regression/Multiple Linear Regression/multiple_linear_regression.ipynb
@@ -151,30 +151,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = regressor.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plt.plot()\n",
+    "y_pred = regressor.predict(X_test)\n",
     "np.set_printoptions(precision=2)\n",
-    "print(np.concatenate((y_pred.reshape(len(y_pred),1), y_test.reshape(len(y_test), 1)), 1))"
+    "# print(np.concatenate((y_pred.reshape(len(y_pred),1), y_test.reshape(len(y_test), 1)), 1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[103015.2 , 103282.38],\n",
+       "       [132582.28, 144259.4 ],\n",
+       "       [132447.74, 146121.95],\n",
+       "       [ 71976.1 ,  77798.83],\n",
+       "       [178537.48, 191050.39],\n",
+       "       [116161.24, 105008.31],\n",
+       "       [ 67851.69,  81229.06],\n",
+       "       [ 98791.73,  97483.56],\n",
+       "       [113969.44, 110352.25],\n",
+       "       [167921.07, 166187.94]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate(((y_pred).reshape(len(y_pred), 1), (y_test).reshape(len(y_test), 1)), 1)"
+   ]
   }
  ],
  "metadata": {
